--- a/jgantt/gantt.html
+++ b/jgantt/gantt.html
@@ -16,94 +16,38 @@ function updateToday()
    var todayDiv = document.getElementById('todayIndicator');
    if(todayDiv == null) return;
    var now = new Date();
-   var left = ((now.getTime() - 1261609200000) * 2.8719786784302914E-8);
+   var left = ((now.getTime() - 1262300400000) * 1.3010668748373667E-7);
    todayDiv.style.left = left;
 }
 </script>
 </head>
 <body onload='updateToday()' style='position: absolute; top:20px; left:20px; margin: 40px; font-family: Arial; font-size: 10px'>
+<div style='z-index:300; position:absolute; top:0px; left:0px; width:1000px; height:300px; border:1px solid black'>&nbsp;</div>
 <div class='year' style='left:0px; z-index: 6'>2009</div>
-<div title='2009/52' class='calendarweekEven' style='width:16px; left:-7px'>52</div>
-<div title='2009/53' class='calendarweekOdd' style='width:16px; left:9px'>53</div>
-<div class='year' style='left:19px; z-index: 7'>2010</div>
-<div class='month' style='left:19px'>January</div>
-<div title='2010/1' class='calendarweekEven' style='width:16px; left:27px'>1</div>
-<div title='2010/2' class='calendarweekOdd' style='width:16px; left:44px'>2</div>
-<div title='2010/3' class='calendarweekEven' style='width:16px; left:62px'>3</div>
-<div title='2010/4' class='calendarweekOdd' style='width:16px; left:79px'>4</div>
-<div class='month' style='left:96px'>February</div>
-<div title='2010/5' class='calendarweekEven' style='width:16px; left:96px'>5</div>
-<div title='2010/6' class='calendarweekOdd' style='width:16px; left:114px'>6</div>
-<div title='2010/7' class='calendarweekEven' style='width:16px; left:131px'>7</div>
-<div title='2010/8' class='calendarweekOdd' style='width:16px; left:148px'>8</div>
-<div class='month' style='left:166px'>March</div>
-<div title='2010/9' class='calendarweekEven' style='width:16px; left:166px'>9</div>
-<div title='2010/10' class='calendarweekOdd' style='width:16px; left:183px'>10</div>
-<div title='2010/11' class='calendarweekEven' style='width:16px; left:200px'>11</div>
-<div title='2010/12' class='calendarweekOdd' style='width:16px; left:218px'>12</div>
-<div title='2010/13' class='calendarweekEven' style='width:16px; left:235px'>13</div>
-<div class='month' style='left:243px'>April</div>
-<div title='2010/14' class='calendarweekOdd' style='width:16px; left:252px'>14</div>
-<div title='2010/15' class='calendarweekEven' style='width:16px; left:270px'>15</div>
-<div title='2010/16' class='calendarweekOdd' style='width:16px; left:287px'>16</div>
-<div title='2010/17' class='calendarweekEven' style='width:16px; left:305px'>17</div>
-<div class='month' style='left:317px'>May</div>
-<div title='2010/18' class='calendarweekOdd' style='width:16px; left:322px'>18</div>
-<div title='2010/19' class='calendarweekEven' style='width:16px; left:339px'>19</div>
-<div title='2010/20' class='calendarweekOdd' style='width:16px; left:357px'>20</div>
-<div title='2010/21' class='calendarweekEven' style='width:16px; left:374px'>21</div>
-<div title='2010/22' class='calendarweekOdd' style='width:16px; left:391px'>22</div>
-<div class='month' style='left:394px'>June</div>
-<div title='2010/23' class='calendarweekEven' style='width:16px; left:409px'>23</div>
-<div title='2010/24' class='calendarweekOdd' style='width:16px; left:426px'>24</div>
-<div title='2010/25' class='calendarweekEven' style='width:16px; left:444px'>25</div>
-<div title='2010/26' class='calendarweekOdd' style='width:16px; left:461px'>26</div>
-<div class='month' style='left:468px'>July</div>
-<div title='2010/27' class='calendarweekEven' style='width:16px; left:478px'>27</div>
-<div title='2010/28' class='calendarweekOdd' style='width:16px; left:496px'>28</div>
-<div title='2010/29' class='calendarweekEven' style='width:16px; left:513px'>29</div>
-<div title='2010/30' class='calendarweekOdd' style='width:16px; left:530px'>30</div>
-<div class='month' style='left:545px'>August</div>
-<div title='2010/31' class='calendarweekEven' style='width:16px; left:548px'>31</div>
-<div title='2010/32' class='calendarweekOdd' style='width:16px; left:565px'>32</div>
-<div title='2010/33' class='calendarweekEven' style='width:16px; left:583px'>33</div>
-<div title='2010/34' class='calendarweekOdd' style='width:16px; left:600px'>34</div>
-<div title='2010/35' class='calendarweekEven' style='width:16px; left:617px'>35</div>
-<div class='month' style='left:622px'>September</div>
-<div title='2010/36' class='calendarweekOdd' style='width:16px; left:635px'>36</div>
-<div title='2010/37' class='calendarweekEven' style='width:16px; left:652px'>37</div>
-<div title='2010/38' class='calendarweekOdd' style='width:16px; left:669px'>38</div>
-<div title='2010/39' class='calendarweekEven' style='width:16px; left:687px'>39</div>
-<div class='month' style='left:697px'>Oktober</div>
-<div title='2010/40' class='calendarweekOdd' style='width:16px; left:704px'>40</div>
-<div title='2010/41' class='calendarweekEven' style='width:16px; left:721px'>41</div>
-<div title='2010/42' class='calendarweekOdd' style='width:16px; left:739px'>42</div>
-<div title='2010/43' class='calendarweekEven' style='width:16px; left:756px'>43</div>
-<div class='month' style='left:774px'>November</div>
-<div title='2010/44' class='calendarweekOdd' style='width:16px; left:774px'>44</div>
-<div title='2010/45' class='calendarweekEven' style='width:16px; left:791px'>45</div>
-<div title='2010/46' class='calendarweekOdd' style='width:16px; left:808px'>46</div>
-<div title='2010/47' class='calendarweekEven' style='width:16px; left:826px'>47</div>
-<div title='2010/48' class='calendarweekOdd' style='width:16px; left:843px'>48</div>
-<div class='month' style='left:848px'>December</div>
-<div title='2010/49' class='calendarweekEven' style='width:16px; left:861px'>49</div>
-<div title='2010/50' class='calendarweekOdd' style='width:16px; left:878px'>50</div>
-<div title='2010/51' class='calendarweekEven' style='width:16px; left:895px'>51</div>
-<div title='2010/52' class='calendarweekOdd' style='width:16px; left:913px'>52</div>
-<div class='year' style='left:925px; z-index: 8'>2011</div>
-<div class='month' style='left:925px'>January</div>
-<div title='2011/1' class='calendarweekEven' style='width:16px; left:930px'>1</div>
-<div title='2011/2' class='calendarweekOdd' style='width:16px; left:947px'>2</div>
-<div title='2011/3' class='calendarweekEven' style='width:16px; left:965px'>3</div>
-<div title='2011/4' class='calendarweekOdd' style='width:16px; left:982px'>4</div>
-<div title='2011/5' class='calendarweekEven' style='width:16px; left:1000px'>5</div>
-<div id='todayIndicator' class='today' style='left: 166px'>&nbsp;</div>
+<div title='2009/53' class='calendarweekEven' style='width:76px; left:-44px'>53</div>
+<div class='year' style='left:0px; z-index: 7'>2010</div>
+<div class='month' style='left:0px'>January</div>
+<div title='2010/1' class='calendarweekOdd' style='width:76px; left:33px'>1</div>
+<div title='2010/2' class='calendarweekEven' style='width:76px; left:112px'>2</div>
+<div title='2010/3' class='calendarweekOdd' style='width:76px; left:191px'>3</div>
+<div title='2010/4' class='calendarweekEven' style='width:76px; left:269px'>4</div>
+<div class='month' style='left:348px'>February</div>
+<div title='2010/5' class='calendarweekOdd' style='width:76px; left:348px'>5</div>
+<div title='2010/6' class='calendarweekEven' style='width:76px; left:427px'>6</div>
+<div title='2010/7' class='calendarweekOdd' style='width:76px; left:505px'>7</div>
+<div title='2010/8' class='calendarweekEven' style='width:76px; left:584px'>8</div>
+<div class='month' style='left:663px'>March</div>
+<div title='2010/9' class='calendarweekOdd' style='width:76px; left:663px'>9</div>
+<div title='2010/10' class='calendarweekEven' style='width:76px; left:741px'>10</div>
+<div title='2010/11' class='calendarweekOdd' style='width:76px; left:820px'>11</div>
+<div title='2010/12' class='calendarweekEven' style='width:76px; left:899px'>12</div>
+<div id='todayIndicator' class='today' style='left: 674px'>&nbsp;</div>
 <div title='50% 
-erster&#32;Task' class='done' style=' top:25px; left:157px; width:6px;'>&nbsp;</div><div title='50% 
-erster&#32;Task' class='task' style='top:25px;left:163px; width:6px; text-indent:11px'>&#35;1</div>
+erster&#32;Task' class='done' style=' top:25px; left:622px; width:28px;'>&nbsp;</div><div title='50% 
+erster&#32;Task' class='task' style='top:25px;left:650px; width:28px; text-indent:33px'>&#35;1</div>
 <div title='75% 
-zweiter&#32;Task' class='done' style=' top:55px; left:167px; width:2px;'>&nbsp;</div><div title='75% 
-zweiter&#32;Task' class='task' style='top:55px;left:169px; width:1px; text-indent:6px'>&#35;2</div>
-<div class='milestone' style='left: 240px;'>B2 sample</div>
+zweiter&#32;Task' class='done' style=' top:55px; left:669px; width:10px;'>&nbsp;</div><div title='75% 
+zweiter&#32;Task' class='task' style='top:55px;left:679px; width:4px; text-indent:9px'>&#35;2</div>
+<div class='milestone' style='left: 1000px;'>B2 sample</div>
 </body>
 </html>
